fixed responsive issue with pics on iphone se

--- a/assets/style.css
+++ b/assets/style.css
@@ -306,9 +306,14 @@ a:hover {
         flex-direction: column;
         align-items: center;
     }
-    .top-rated, .new-rated{
+    .top-rated{
+        height: 400px;
         margin: 2% 0;
-    }  
+    } 
+    .new-rated{
+        height: 250px;
+        margin: 2% 0;
+    }   
 }
 
 /*  about page responsive */
